190723|swagger 프로토타입 생성

--- a/SSAFYhashtag/pom.xml
+++ b/SSAFYhashtag/pom.xml
@@ -22,18 +22,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -50,7 +47,21 @@
 			<version>1.0.2</version>
 			<artifactId>spring-swagger-simplified</artifactId>
 		</dependency>
-		
+
+		<!-- swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version> 
+		</dependency>
+		<dependency>
+					<groupId>io.springfox</groupId>
+					<artifactId>springfox-swagger-ui</artifactId>
+					<version>2.9.2</version>
+		</dependency>
+		<!-- swagger -->
+
+
 		<!-- DB -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
