--- a/SSAFYhashtag/pom.xml
+++ b/SSAFYhashtag/pom.xml
@@ -47,6 +47,11 @@
 			<version>1.0.2</version>
 			<artifactId>spring-swagger-simplified</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>xpp3</groupId>
+			<artifactId>xpp3</artifactId>
+			<version>1.1.4c</version>
+		</dependency>
 
 		<!-- swagger -->
 		<dependency>
