--- a/SSAFYhashtag/src/main/resources/application.properties
+++ b/SSAFYhashtag/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/testdb
+spring.datasource.url=jdbc:mariadb://localhost:3306/together
 spring.datasource.username=root
 spring.datasource.password=0608
 
