--- a/together-feature-vue_dongmin/together-feature-vue_dongmin/pjt_trip/package.json
+++ b/together-feature-vue_dongmin/together-feature-vue_dongmin/pjt_trip/package.json
@@ -80,6 +80,7 @@
     "sinon-chai": "^2.8.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vee-validate": "^2.2.13",
     "vue-cli-plugin-vuetify": "^0.6.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
