--- a/pjt_trip/package.json
+++ b/pjt_trip/package.json
@@ -14,7 +14,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
     "vue": "^2.5.2",
     "vue-media-diff": "^1.1.0",
     "vue-router": "^3.0.1",
@@ -51,6 +54,7 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
+    "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
