--- a/pjt_trip/package.json
+++ b/pjt_trip/package.json
@@ -14,11 +14,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "vue": "^2.5.2",
+    "vue-axios": "^2.1.4",
     "vue-media-diff": "^1.1.0",
     "vue-router": "^3.0.1",
     "vue-scroll-loader": "^1.1.6",
