--- a/pjt_trip/package.json
+++ b/pjt_trip/package.json
@@ -19,11 +19,12 @@
     "cors": "^2.8.5",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
-    "vue": "^2.5.2",
+    "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-media-diff": "^1.1.0",
     "vue-router": "^3.0.1",
     "vue-scroll-loader": "^1.1.6",
+    "vue-session": "^1.0.0",
     "vuejs-loading-plugin": "^1.0.5",
     "vuetify": "^1.5.16"
   },
