--- a/pjt_trip/package.json
+++ b/pjt_trip/package.json
@@ -24,6 +24,7 @@
     "vue-media-diff": "^1.1.0",
     "vue-router": "^3.0.1",
     "vue-scroll-loader": "^1.1.6",
+    "vue-session": "^1.0.0",
     "vuejs-loading-plugin": "^1.0.5",
     "vuetify": "^1.5.16"
   },
