--- a/pjt/hj/package.json
+++ b/pjt/hj/package.json
@@ -15,9 +15,15 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "expose-loader": "^0.7.5",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "vee-validate": "^2.2.13",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.1",
+    "vue-session": "^1.0.0",
     "vuetify": "^1.5.16"
   },
   "devDependencies": {
