--- a/pjt_trip/package.json
+++ b/pjt_trip/package.json
@@ -17,8 +17,10 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
+    "socket.io": "^2.2.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.4",
     "vue-media-diff": "^1.1.0",
